--- a/EXE201/appsettings.json
+++ b/EXE201/appsettings.json
@@ -11,7 +11,7 @@
   },
   "Id": 1,
   "Username": "admin",
-  "Password": "$2a$13$vyDtW2vbUXc13ytVSJyyV.VkPXoj8FIEOwyOUl33OJu44wpVfS.U.",
+  "Password": "$2a$13$n.WkjPOWNgcFaQU2FEbZyOTrFv8/QzFvtkpbjfjVJeqPFe97IitD2",
   "Jwt": {
     "Issuer": "https://localhost:8080",
     "Audience": "https://localhost:8080",
