--- a/EXE201/appsettings.json
+++ b/EXE201/appsettings.json
@@ -7,11 +7,27 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionStringDB": "server=(local);database=Pentacle_Marketing;uid=sa;pwd=12345;TrustServerCertificate=True"
+    "DefaultConnectionStringDB": "Server=tcp:pentacel.database.windows.net,1433;Initial Catalog=Pentacle-Marketing-DB;Persist Security Info=False;User ID=hieu;Password=#Pentacle2024;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-  "Id": 1,
-  "Username": "admin",
-  "Password": "$2a$13$n.WkjPOWNgcFaQU2FEbZyOTrFv8/QzFvtkpbjfjVJeqPFe97IitD2",
+  "Users": [
+    {
+      "Username": "admin",
+      "Password": "$2a$13$fCah7RRYIXiV2gKLA7WNZ.6GKfbGG4PVjJTpudagq9JI2A19WZZJm"
+    },
+    {
+      "Username": "nhivo085405",
+      "Password": "$2a$13$VGkRr.xgLSx0Hx.3nYmZzOi6Vbtv4BfvVXVQOWpNGN.BclQI3SZ2i"
+    },
+    {
+      "Username": "uyenht0812",
+      "Password": "$2a$13$l.WzbzIH6kyg9K0FgTPQXuuxghplW5CFknjK0j.MHrNC/VfXCplQy"
+    },
+    {
+      "Username": "phamthu1463",
+      "Password": "$2a$13$i59bECbFb1C38b4kHA.HkO5Lrtc6yW4R5Mq5EMaNMnZLEa1xUQV06"
+    }
+  ],
+
   "Jwt": {
     "Issuer": "https://localhost:8080",
     "Audience": "https://localhost:8080",
