--- a/EXE201/appsettings.json
+++ b/EXE201/appsettings.json
@@ -25,6 +25,14 @@
     {
       "Username": "phamthu1463",
       "Password": "$2a$13$i59bECbFb1C38b4kHA.HkO5Lrtc6yW4R5Mq5EMaNMnZLEa1xUQV06"
+    },
+    {
+      "Username": "phuonghy",
+      "Password": "$2a$13$NdrlJmhzOBzA/jzpzuu7tOc6rN5HjLrH6SHYBAGFZPy8/F.zTcf4u"
+    },
+    {
+      "Username": "sammyd4o",
+      "Password": "$2a$13$6yO2eMwMUs1vvVgoKv/eK.I4hLWvuV5PUUPRZCjiwctqnyXQOW.k."
     }
   ],
 
